--- a/css/Style.css
+++ b/css/Style.css
@@ -5,16 +5,16 @@ body {
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #f7f8f9;
   position: fixed;
   bottom: 0;
   width: 100%;
 }
 
 .navbar a {
-  float: left;
+  float: right;
   display: block;
-  color: #f2f2f2;
+  color: #38a8ad;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
