--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,14 @@
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar {
-  overflow: hidden;
+body {margin:0;}
+.icon-bar {
+  width: 100%;
   background-color: #f7f8f9;
+  overflow: hidden;
   position: fixed;
   bottom: 0;
-  width: 100%;
 }
-
-.navbar a {
-  float: right;
-  display: block;
-  color: #38a8ad;
+.icon-bar a {
+  float: left;
+  width: 25%;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navbar a:hover {
-  background: #f1f1f1;
-  color: black;
-}
-
-.navbar a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.main {
-  padding: 16px;
-  margin-bottom: 30px;
+  padding: 10px 0px;
 }
