--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
-body {margin:0;}
+
+
+/* Bottom Navbar og styling*/
+body {margin:0;
+position: relative;
+  height: 100%;
+  background-image: linear-gradient(#37A8AD, #E4F2F4);}
+
+
 .icon-bar {
   width: 100%;
   background-color: #f7f8f9;
@@ -13,12 +21,6 @@ body {margin:0;}
   padding: 10px 0px;
 }
 
-/*Gradient background*/
-#grad1 {
-    position: relative;
-  height: 2125px;
-  background-image: linear-gradient(#37A8AD, #E4F2F4);
-}
 /*button style*/
 .buttonlogind{
   background-color: white;
