--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ body {
     position: relative;
   height: 2125px;
   background-image: linear-gradient(#37A8AD, #E4F2F4);
-
 }
 
 .buttonlogind{
@@ -53,4 +52,8 @@ body {
   font-size: 50px;
   margin: 4px 2px;
   cursor: pointer;
+}
+
+.btnlogin2{
+    
 }
