rettelser på gradient
manglede at tilføje viewport på alle de andre sider

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 
 /* Bottom Navbar og styling*/
 body {margin:0;
-position: relative;
-  height: 100%;
-  background-image: linear-gradient(#37A8AD, #E4F2F4);}
+      position: relative;
+      height: 812px;
+      background-image: linear-gradient(#37A8AD, #E4F2F4);}
 
 
 .icon-bar {
