--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /* Bottom Navbar og styling*/
 body {margin:0;
       position: relative;
-      height: 812px;
+      height: 100wh;
       background-image: linear-gradient(#37A8AD, #E4F2F4);}
 
 
