--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 /* Bottom Navbar og styling*/
 body {margin:0;
       position: relative;
-      height: 100wh;
+      height: 812px;
       background-image: linear-gradient(#37A8AD, #E4F2F4);}
 
 
@@ -18,25 +18,9 @@ body {margin:0;
   float: left;
   width: 25%;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+  padding: 14px 0px;
 }
 
-.navbar a:hover {
-  background: #f1f1f1;
-  color: black;
-}
-
-.navbar a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.main { 
-  padding: 16px;
-  margin-bottom: 30px;
-}
 
 
 /*button style*/
