--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
-
-
 /* Bottom Navbar og styling*/
 body {margin:0;
-position: relative;
-  height: 100%;
-  background-image: linear-gradient(#37A8AD, #E4F2F4);}
+      position: relative;
+      height: 812px;
+      background-image: linear-gradient(#37A8AD, #E4F2F4);}
 
 
 .icon-bar {
@@ -18,31 +16,16 @@ position: relative;
   float: left;
   width: 25%;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+  padding: 14px 0px;
 }
 
-.navbar a:hover {
-  background: #f1f1f1;
-  color: black;
-}
-
-.navbar a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.main { 
-  padding: 16px;
-  margin-bottom: 30px;
-}
 
 
 /*button style*/
 .buttonlogind{
   background-color: white;
-  border: none;
+  border-color: aqua;
+  border-radius: 90px;
   color: #022E42;
   padding: 20px;
   text-align: center;
@@ -58,4 +41,5 @@ position: relative;
 .btnlogin2{
     
 }
+
 
