--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,28 @@
 /* Bottom Navbar og styling*/
 body {margin:0;
+      overflow-x: hidden;
+      overflow-y: hidden;
       position: relative;
       height: 812px;
-      background-image: linear-gradient(#37A8AD, #E4F2F4);}
+      background-image: linear-gradient(#37A8AD, #E4F2F4);
+     }
 
-
-.icon-bar {
+.grid-container1 {
+  margin: 0;
   width: 100%;
-  background-color: #f7f8f9;
-  overflow: hidden;
   position: fixed;
-  bottom: 0;
+  bottom:0;
+  display: grid;
+  grid-row-gap: 0px;
+  grid-template-columns: auto auto auto auto;
+  background-color: #f7f8f9;
+  padding: 10px;
 }
-.icon-bar a {
-  float: left;
-  width: 25%;
+
+.grid-item1 {
+  padding: 5px;
   text-align: center;
-  padding: 14px 0px;
 }
-
-
 
 /*button style*/
 .buttonlogind{
