--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,43 @@
 /* Bottom Navbar og styling*/
-body {margin:0;
+body {
+      /* Til at fjerne skærmkanter*/
+      margin:0;
+      /* fjerner visuel scroll både ved X & Y-aksen*/
       overflow-x: hidden;
       overflow-y: hidden;
       position: relative;
+      /*Gradient baggrund*/
       height: 812px;
       background-image: linear-gradient(#37A8AD, #E4F2F4);
      }
-.active {
-  animation: ease: 0.3s;
-}
+
 .grid-container1 {
   margin: 0;
   width: 100%;
+  /*Det er for at den ikke scroller med resten, men forbliver på sin plads*/
   position: fixed;
+  /* Dette er for at bestemme at den skal ligge i bunden*/
   bottom:0;
+  /*Grid opsætnings deffinitation*/
   display: grid;
-  grid-row-gap: 0px;
+  /*Denne funktion gør således at grid selv bestemmer str. for at alle er lige store*/
   grid-template-columns: auto auto auto auto;
+  /*Baggrunds farve på boksene*/
   background-color: #f7f8f9;
+  /*Dette giver en kant på boksene, så de ikke ligger helt i bunden*/
   padding: 10px;
 }
 
-.grid-item1 {
+.grid-item1/*deffination af alle grid bokse*/ {
+  /*Dette er for at få dem længere væk fra hindanden*/
   padding: 5px;
-  text-align: center;
+  /* Dette er for at ikonerne er i midten af boksene*/
+  align-content: center;
 }
 
 /* Animation 1 upsizing af icon*/
 .grid-item1 .scale-up-bottom {
+    /* Starts funktion på upscaling af ikonet*/
 	-webkit-animation: scale-up-bottom 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 	        animation: scale-up-bottom 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
