--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
       overflow-y: hidden;
       position: relative;
       /*Gradient baggrund*/
-      height: 812px;
+      height: 812px;;
       background-image: linear-gradient(#37A8AD, #E4F2F4);
      }
 
