--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,9 @@ body {
 
 .btnlogindforside{
  border: none;
- background-color: white;
+ background-color: #ffff;
  border-radius: 80px;
- color: #022E42;
+ color: #022e42;
  padding:  1px 125px;
  font-size: 20px;
  font-family: 'montserrat';
@@ -48,8 +48,9 @@ body {
 }
 
 .btnopretbrugerforside{
- background-color: white;
+ background-color: #ffff;
  border-radius: 80px;
+ border: none;
  color: #022E42;
  padding: 1px 125px;
  font-size: 20px;
@@ -84,7 +85,7 @@ body {
 }
 
 /* Animation 1 upsizing af icon*/
-.grid-item1 .scale-up-bottom {
+.scale-up-bottom {
     /* Starts funktion på upscaling af ikonet*/
 	-webkit-animation: scale-up-bottom 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     animation: scale-up-bottom 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
@@ -119,7 +120,7 @@ body {
 }
 
 /*animation 2 downsizing af icons */
-.grid-item1. scale-down-center {
+.scale-down-center {
 	-webkit-animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both; }
 @-webkit-keyframes scale-down-center {
