--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,127 @@ body {margin:0;
   position: relative;
 }
 
+               /* IDAS WORK START */
 
-.btnlogin2{
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+    font-size: 60px;
+    color: white; 
     
 }
+
+.loginlogo{
+  grid-column-start: 2; 
+  grid-row-start: 1;
+  height: 160px; 
+  width: 160px;
+  margin-left:30%;
+    margin-top: -2%; 
+}
+
+.velkommen
+{
+    font-weight: 600; 
+    font-family: 'montserrat';
+    font-weight: 600; 
+    font-size: 27px;
+    color: white;
+    grid-column-start: 2; 
+    grid-row-start: 2;
+     margin-left: 15%;
+    margin-top: 15%; 
+}
+
+.oplysningerlogin{
+  font-weight: 300; 
+    font-family: 'montserrat';
+    font-size: 15px;
+    font-weight: 300; 
+    grid-column-start: 2; 
+    grid-row-start: 3;
+    margin-top: -5%; 
+     margin-left: 15%;
+}
+
+form {
+    height: auto;
+    border-radius: 80px; 
+}
+
+.input-item {
+    background: #fff;
+    color: #333;
+}
+
+input[class="form-input"]{
+    width: 275px; 
+    height: 60px;
+  
+    border-radius: 29px;
+    
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-weight: 300; 
+  
+    outline: none;
+    border: none;
+    transition: 0.2s linear;
+    
+    margin-left: 15%;
+}
+
+.forgot-pass{
+  font-size: 14px;
+  margin-left: 30%;
+    margin-top: 2%;
+  color: #022E42;
+    text-decoration: underline; 
+    font-family: 'montserrat'; 
+    
+}
+
+
+button {
+    color: White;
+  
+    width: 275px;
+    height: 60px;
+  
+    background: #37A8AD;
+    border-radius: 29px;
+    
+    outline: none;
+    border: none;
+  
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    
+    font-size: 21px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500; 
+    margin-left: 15%;
+}
+
+button:hover {
+    animation: ani9 0.4s ease-in-out infinite alternate;
+}
+@keyframes ani9 {
+    0% {
+        transform: translateY(3px);
+    }
+
+
+/*Grid*/ 
+.logingrid{
+    display: grid; 
+    grid-template-columns: 10% 85% 5%; 
+    grid-template-rows: 30% 10%; 
+    grid-row-gap: 1em; 
+}
+
+                /* IDAS WORK SLUT */
 
