--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,55 @@ input[class="form-input"]{
     margin-left: 15%;
 }
 
+.forgot-pass{
+  font-size: 14px;
+  margin-left: 30%;
+    margin-top: 2%;
+  color: #022E42;
+    text-decoration: underline; 
+    font-family: 'montserrat'; 
+}
+
+button {
+    color: White;
+  
+    width: 275px;
+    height: 60px;
+  
+    background: #37A8AD;
+    border-radius: 29px;
+    
+    outline: none;
+    border: none;
+  
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s linear;
+    
+    font-size: 21px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500; 
+    margin-left: 15%;
+}
+
+button:hover {
+    animation: ani9 0.4s ease-in-out infinite alternate;
+}
+@keyframes ani9 {
+    0% {
+        transform: translateY(3px);
+    }
+
+
+/*Grid*/ 
+.logingrid{
+    display: grid; 
+    grid-template-columns: 10% 85% 5%; 
+    grid-template-rows: 30% 10%; 
+    grid-row-gap: 1em; 
+}
+
+/*    Idas work*/
 
 .logindforside{
  grid-column-start: 2;
