--- a/css/keyinfostyle.css
+++ b/css/keyinfostyle.css
@@ -112,3 +112,34 @@
     grid-column-start: 2;
     grid-row-start: 4;   
 }
+
+ .keyinfoitems{
+     display: grid;
+        
+    } 
+.rediger{
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 90%;
+    color: #022e42;
+    grid-column-start: 3;
+    grid-row-start: 1;
+}
+
+.del{
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 85%;
+    color: #022e42;
+    grid-column-start: 3;
+    grid-row-start: 2;
+}
+
+.slet{
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 85%;
+    color: #022e42;
+    grid-column-start: 3;
+    grid-row-start: 3;
+}
