--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -115,6 +115,5 @@ button:hover {
     animation: ani9 0.4s ease-in-out infinite alternate;
 }
 @keyframes ani9 {
-    0% {
-        transform: translateY(3px);}}
+        transform: translateY(3px);}
     
