Nøglesider og nøgleinfo
Jeg har lavet nøglesiden færdig, samt alle infosiderne om alle nøglerne

--- a/css/fitnesskeyinfostyle.css
+++ b/css/fitnesskeyinfostyle.css
@@ -1,77 +1,144 @@
-.rul{
-     /* Til at fjerne skærmkanter*/
+/* Bottom Navbar og styling*/
+.ikkerul{
+      z-index: 1;
+      /* Til at fjerne skærmkanter*/
       margin:0;
-      /* fjerner visuel scroll både ved X-aksen*/
+      /* fjerner visuel scroll både ved X & Y-aksen*/
       overflow-x: hidden;
+      overflow-y: hidden;
+      position: relative;
       /*Gradient baggrund*/
-      height: 1000px;
-      background-image: linear-gradient(#37A8AD, #E4F2F4); 
-}
-
-
-/*NØGLER*/
-.keygrid{
-    display: grid;
-    grid-template-columns: 3% 78%;
-    grid-template-rows: 5% 5% 10% 20% 20 20%%;
-}
-    
-.dinenoegler{
-    grid-column-start: 2;
-    grid-row-start: 3;
-    font-weight: 600;
-	font-family: 'Montserrat';
-    font-size: 33px;
-    color: #ffff;
-    margin-top: 8%
-}
-
-.add{  
-grid-column-start: 3;
-    grid-row-start:3;
-     border-radius: 20px;
-    padding: 10px; 
-    margin-top: 58%;
-    margin-left: -4%
-}
-    
-.fitnessworld{
-    grid-column-start:1;
-    grid-row-start: 4;
-    border-radius: 20px;
-    padding: 10px; 
-    margin-left: -60%;
-    border: 50%;
-}
-
-.ucl{
+      height: 812px;
+      background-image: linear-gradient(#37A8AD, #E4F2F4);
+     }
+.back {
+    z-index: 5;
     grid-column-start: 1;
-    grid-row-start: 5;
-     border-radius: 20px;
-    padding: 10px; 
-    margin-left: -50%;
-
+    grid-row-start: 2;
+  padding: 8px 16px;
+    font-size: 20px;
+    color: white;    
 }
-
-.rejsekort{
+ 
+.infogrid{
+        z-index: 4;
+        display: grid;
+        grid-template-columns: 0.5fr 1fr 1fr;
+        grid-template-rows: 5% 10% 10% 10% 20% 50% 20%;
+    }
+    
+.fitnessinfo{
+   margin-top: 25%;
+    position: absolute;
+    margin-left: 3%
+}
+.box{
+    z-index: 5;
     grid-column-start: 1;
     grid-row-start: 6;
-     border-radius: 20px;
-    padding: 10px; 
-    margin-left: -50%;
+    margin-left: 3%;
+    
+}
 
+.infoitems{
+        z-index: 6;
+        display: grid;
+        grid-template-columns: 0.5fr 0.6fr 2.5fr 0.5fr 0.5fr 0.5fr;
+        grid-template-rows: 20% 20% 20% 20% 20% 15%;
+    margin-top: -20%
 }
-.keybody{
-    overflow: scroll;
+
+.fitnesstext{
+    z-index: 7;
+    margin-top: -77%;
+    margin-left: 10%;
+    color: #022e42;
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 120%;
+    grid-column-start: 3;
+    grid-row-start: 1;
 }
+
+.fitnesstext2{
+    z-index: 7;
+    margin-top: -40%;
+    margin-left: 15%;
+    color: #022e42;
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 55%;
+    grid-column-start: 3;
+    grid-row-start: 1;
+}
+.rediger{
+    z-index: 7;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 80%;
+    color: #022e42;
+    grid-column-start: 3;
+    grid-row-start: 1;
+    margin-left: -20%
+}
+
+.redigerknap{
+    margin-top: 15px;
+    z-index: 7;
+    margin-top: 60%;
+    grid-column-start: 5;
+    grid-row-start: 1;
+}
+
+.del{
+    z-index: 7;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 80%;
+    color: #022e42;
+    grid-column-start: 3;
+    grid-row-start: 3;
+    margin-top: -4%;
+    margin-left: -20%
+ 
+}
+
+.delknap{
+    margin-top: 15px;
+    z-index: 7;
+    grid-column-start: 5;
+    grid-row-start: 3;
+    
+}
+
+.slet{
+    z-index: 7;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 80%;
+    color: #022e42;
+    grid-column-start: 3;
+    grid-row-start: 4;
+    margin-top: 7%;
+    color: #FA7268;
+    margin-left: -20%
+}
+
+.sletknap{
+    margin-top: 15px;
+    z-index: 7;
+    grid-column-start: 5;
+    grid-row-start: 4;
+    margin-top: 80%
+}
+
 
 .grid-container1 {
-  z-index: 1;
+  z-index: 2;
   margin: 0;
   width: 100%;
   /*Det er for at den ikke scroller med resten, men forbliver på sin plads*/
   position:fixed;
-    
   /* Dette er for at bestemme at den skal ligge i bunden*/
   bottom:0;
   /*Grid opsætnings deffinitation*/
@@ -85,6 +152,7 @@ grid-column-start: 3;
 }
 
 .grid-item1/*deffination af alle grid bokse*/ {
+   z-index: 3;
   /*Dette er for at få dem længere væk fra hindanden*/
   padding: 5px;
   /* Dette er for at ikonerne er i midten af boksene*/
@@ -124,7 +192,7 @@ grid-column-start: 3;
     -webkit-transform-origin: 50% 100%;
             transform-origin: 50% 100%;
   }
-
+}
 
 /*animation 2 downsizing af icons */
 .scale-down-center {
@@ -148,5 +216,4 @@ grid-column-start: 3;
   100% {
     -webkit-transform: scale(0.6);
             transform: scale(0.6);
-  }  
-
+  }    
