--- a/uclkeyinfo.css
+++ b/uclkeyinfo.css
@@ -1,5 +1,6 @@
 /* Bottom Navbar og styling*/
-.ikkerul {
+.ikkerul{
+      z-index: 1;
       /* Til at fjerne skærmkanter*/
       margin:0;
       /* fjerner visuel scroll både ved X & Y-aksen*/
@@ -9,81 +10,135 @@
       /*Gradient baggrund*/
       height: 812px;
       background-image: linear-gradient(#37A8AD, #E4F2F4);
-    }
-a {
-z-index: 8;
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-    font-size: 60px;
-    color: white;    
-}
-/*Keyinfo*/
-/*
-.keyinfogrid{
-    display: grid:
-    grid-template-columns: 5% 10%;
-    grid-template-rows: 5% 10% 28% 20% 20%;   
-}
-*/
-
-.fitnessinfo{
-   
-    margin-left: 3%;
-    position: relative
-     
-}
-.keyinfobox{
-    margin-left: 3%;
-    margin-top: -10%;
-    box-shadow: 30px;
-    position: absolute;
-     
-}
-
-/*Tekst og grid*/
-
- .keyinfoitems{
-     display: grid; 5% 50% 20%;
-     grid-template-columns: 20%;
-        
-    } 
-.noti{
-    font-family: Montserrat;
-    font-weight: 500;
-    font-size: 85%;
-    color: #022e42;
+     }
+.back {
+    z-index: 5;
     grid-column-start: 1;
     grid-row-start: 2;
+  padding: 8px 16px;
+    font-size: 20px;
+    color: white;    
+}
+ 
+.infogrid{
+        z-index: 4;
+        display: grid;
+        grid-template-columns: 0.5fr 1fr 1fr;
+        grid-template-rows: 5% 10% 10% 10% 20% 50% 20%;
+    }
+    
+.fitnessinfo{
+   margin-top: 25%;
     position: absolute;
+    margin-left: 3%
+}
+.box{
+    z-index: 5;
+    grid-column-start: 1;
+    grid-row-start: 6;
+    margin-left: 3%;
+    
+}
+
+.infoitems{
+        z-index: 6;
+        display: grid;
+        grid-template-columns: 0.5fr 0.6fr 2.5fr 0.5fr 0.5fr 0.5fr;
+        grid-template-rows: 20% 20% 20% 20% 20% 15%;
+    margin-top: -20%
+}
+
+.skoletext{
+    z-index: 7;
+    margin-top: -77%;
+    margin-left: 22%;
+    color: #022e42;
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 120%;
+    grid-column-start: 3;
+    grid-row-start: 1;
+}
+
+.skoletext2{
+    z-index: 7;
+    margin-top: -40%;
+    margin-left: 40%;
+    color: #022e42;
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 55%;
+    grid-column-start: 3;
+    grid-row-start: 1;
+}
+.rediger{
+    z-index: 7;
+    font-family: Montserrat;
+    font-weight: 500;
+    font-size: 80%;
+    color: #022e42;
+    grid-column-start: 3;
+    grid-row-start: 1;
+    margin-left: -20%
+}
+
+.redigerknap{
+    margin-top: 15px;
+    z-index: 7;
+    margin-top: 60%;
+    grid-column-start: 5;
+    grid-row-start: 1;
 }
 
 .del{
+    z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 85%;
+    font-size: 80%;
     color: #022e42;
-    grid-column-start: 2;
-    grid-row-start: ;
-    position: absolute;
+    grid-column-start: 3;
+    grid-row-start: 3;
+    margin-top: -4%;
+    margin-left: -20%
+ 
+}
+
+.delknap{
+    margin-top: 15px;
+    z-index: 7;
+    grid-column-start: 5;
+    grid-row-start: 3;
+    
 }
 
 .slet{
+    z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 85%;
+    font-size: 80%;
     color: #022e42;
-    grid-column-start: ;
-    grid-row-start: ;
-    position: absolute;
+    grid-column-start: 3;
+    grid-row-start: 4;
+    margin-top: 7%;
+    color: #FA7268;
+    margin-left: -20%
 }
+
+.sletknap{
+    margin-top: 15px;
+    z-index: 7;
+    grid-column-start: 5;
+    grid-row-start: 4;
+    margin-top: 80%
+}
+
+
 .grid-container1 {
-  z-index: 1;
+  z-index: 2;
   margin: 0;
   width: 100%;
   /*Det er for at den ikke scroller med resten, men forbliver på sin plads*/
   position:fixed;
-    
   /* Dette er for at bestemme at den skal ligge i bunden*/
   bottom:0;
   /*Grid opsætnings deffinitation*/
@@ -97,6 +152,7 @@ z-index: 8;
 }
 
 .grid-item1/*deffination af alle grid bokse*/ {
+   z-index: 3;
   /*Dette er for at få dem længere væk fra hindanden*/
   padding: 5px;
   /* Dette er for at ikonerne er i midten af boksene*/
@@ -160,4 +216,4 @@ z-index: 8;
   100% {
     -webkit-transform: scale(0.6);
             transform: scale(0.6);
-  }  
+  }    
