--- a/css/helpstyle.css
+++ b/css/helpstyle.css
@@ -13,7 +13,7 @@
      }
 
  
-.settingsgrid{
+.helpgrid{
         z-index: 4;
         display: grid;
         grid-template-columns: 1fr 2fr 1fr;
@@ -26,7 +26,7 @@
     grid-row-start: 6;
 }
 
-.settingsitems{
+.helpitems{
         z-index: 6;
         display: grid;
         grid-template-columns: 0.5fr 0.2fr 2.5fr 0.5fr 0.5fr 0.5fr;
@@ -38,7 +38,7 @@
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 85%;
+    font-size: 80%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 1;
@@ -55,7 +55,7 @@
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 85%;
+    font-size: 80%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 2;
@@ -72,7 +72,7 @@
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 85%;
+    font-size: 80%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 3;
