--- a/css/opretstyle.css
+++ b/css/opretstyle.css
@@ -20,8 +20,6 @@ a {
 }
 
 .loginlogo{
-  grid-column-start: 2; 
-  grid-row-start: 1;
   height: 160px; 
   width: 160px;
   margin-left:30%;
@@ -34,8 +32,6 @@ a {
     font-weight: 600; 
     font-size: 27px;
     color: white;
-    grid-column-start: 2; 
-    grid-row-start: 2;
     margin-left: 15%;
     margin-top: 10%;
 }
@@ -46,8 +42,6 @@ a {
     font-size: 13px;
     font-weight: 300;
     color: #022E42; 
-    grid-column-start: 2; 
-    grid-row-start: 3;
     margin-top: -5%; 
      margin-left: 15%;  
 }
@@ -71,7 +65,7 @@ input[class="form-input"]{
 }
 
     
-    input[class="form-input"]{
+.input[class="form-input"]{
     font-family: 'montserrat'; 
 }
 
@@ -80,8 +74,18 @@ input[class="form-input"]{
     font-family: 'montserrat'; 
         font-size: 10px;  
     color: #022E42;
-    margin-left: 12%;
+    margin-left: 17%;
+    margin-top: 2%;  
     
+}
+
+span{
+    color: black; 
+}
+
+input{
+    margin-left: 1em; 
+    margin-bottom: .5em; 
 }
 
 button {
@@ -111,3 +115,5 @@ button:hover {
 }
 @keyframes ani9 {
         transform: translateY(3px);}
+
+	
