--- a/css/fitnesskeyinfostyle.css
+++ b/css/fitnesskeyinfostyle.css
@@ -39,7 +39,9 @@
     margin-left: 3%;
     
 }
-
+img {
+  border-radius: 5%;
+}
 .infoitems{
         z-index: 6;
         display: grid;
@@ -66,7 +68,7 @@
     margin-left: 15%;
     color: #022e42;
     font-family: Montserrat;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 55%;
     grid-column-start: 3;
     grid-row-start: 1;
