--- a/css/keystyle.css
+++ b/css/keystyle.css
@@ -12,29 +12,111 @@
 /*NØGLER*/
 .keygrid{
     display: grid;
-    grid-template-columns: 3% 78%;
+    grid-template-columns: 3% 78% 50%;
     grid-template-rows: 5% 5% 10% 20% 20 20%%;
 }
     
 .dinenoegler{
     grid-column-start: 2;
-    grid-row-start: 3;
+    grid-row-start: 1;
     font-weight: 600;
 	font-family: 'Montserrat';
     font-size: 33px;
     color: #ffff;
-    margin-top: 8%
+    margin-top: 8%;
 }
 
 .add{  
-grid-column-start: 3;
-    grid-row-start:3;
-     border-radius: 20px;
+    grid-column-start: 2;
+    grid-row-start:1;
+    border-radius: 20px;
     padding: 10px; 
-    margin-top: 58%;
-    margin-left: -4%
+    margin-top: 35%;
+    margin-left: -6%
 }
-    
+* {box-sizing: border-box;}
+
+h1{
+    font-family: 'montserrat';
+    color: #022E42;
+    font-size: 25px;
+    font-weight: 600;
+}
+.navn{
+    font-family: 'montserrat';
+    color: #022E42;
+    font-size: 15px;
+}
+
+.kodeord{
+     font-family: 'montserrat';
+    color: #022E42;
+    font-size: 15px;
+}
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  color: white;
+  cursor: pointer;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 365px;
+  padding: 10px;
+  background-color: #F7F8F9;
+  border-radius: 5%;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the tilføj nøgle button */
+.form-container .btn {
+  background-color: #37A8AD;
+  font-family: 'montserrat'
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+}
+
+/* Add a background color to the cancel button */
+.form-container .cancel {
+  background-color: #FA7268;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
+
+.btn {
+    font-family: 'montserrat';
+    font-weight: 500;
+    font-size: 15px;
+    color: #ffff;
+}
 .fitnessworld{
     grid-column-start:1;
     grid-row-start: 4;
@@ -65,6 +147,7 @@ grid-column-start: 3;
     overflow: scroll;
 }
 
+
 .grid-container1 {
   z-index: 1;
   margin: 0;
@@ -91,6 +174,9 @@ grid-column-start: 3;
   align-content: center;
 }
 
+img {
+  border-radius: 5%;
+}
 /* Animation 1 upsizing af icon*/
 .scale-up-bottom {
     /* Starts funktion på upscaling af ikonet*/
