--- a/rejsekortinfo.css
+++ b/rejsekortinfo.css
@@ -27,6 +27,9 @@
         grid-template-rows: 5% 10% 10% 10% 20% 50% 20%;
     }
     
+img {
+  border-radius: 5%;
+}
 .fitnessinfo{
    margin-top: 25%;
     position: absolute;
@@ -50,12 +53,12 @@
 
 .rejsekorttext{
     z-index: 7;
-    margin-top: -60%;
+    margin-top: -75%;
     margin-left: 10%;
     color: #022e42;
     font-family: Montserrat;
     font-weight: 600;
-    font-size: 120%;
+    font-size: 200%;
     grid-column-start: 3;
     grid-row-start: 1;
 }
@@ -64,7 +67,7 @@
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 80%;
+    font-size: 110%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 1;
@@ -83,7 +86,7 @@
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 80%;
+    font-size: 110%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 3;
@@ -104,7 +107,7 @@
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 80%;
+    font-size: 110%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 4;
