--- a/uclkeyinfo.css
+++ b/uclkeyinfo.css
@@ -48,6 +48,9 @@
     margin-top: -20%
 }
 
+img {
+  border-radius: 5%;
+}
 .skoletext{
     z-index: 7;
     margin-top: -77%;
@@ -66,7 +69,7 @@
     margin-left: 40%;
     color: #022e42;
     font-family: Montserrat;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 55%;
     grid-column-start: 3;
     grid-row-start: 1;
