--- a/css/fitnesskeyinfostyle.css
+++ b/css/fitnesskeyinfostyle.css
@@ -57,7 +57,7 @@ img {
     color: #022e42;
     font-family: Montserrat;
     font-weight: 600;
-    font-size: 120%;
+    font-size: 200%;
     grid-column-start: 3;
     grid-row-start: 1;
 }
@@ -69,7 +69,7 @@ img {
     color: #022e42;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 55%;
+    font-size: 110%;
     grid-column-start: 3;
     grid-row-start: 1;
 }
@@ -77,7 +77,7 @@ img {
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 80%;
+    font-size: 110%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 1;
@@ -87,23 +87,23 @@ img {
 .redigerknap{
     margin-top: 15px;
     z-index: 7;
-    margin-top: 60%;
+    margin-top: 110%;
     grid-column-start: 5;
     grid-row-start: 1;
 }
 
-.del{
-    z-index: 7;
+.delnoegle{
+     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 80%;
+    font-size: 110%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 3;
     margin-top: -4%;
     margin-left: -20%
- 
 }
+    
 
 .delknap{
     margin-top: 15px;
@@ -117,7 +117,7 @@ img {
     z-index: 7;
     font-family: Montserrat;
     font-weight: 500;
-    font-size: 80%;
+    font-size: 110%;
     color: #022e42;
     grid-column-start: 3;
     grid-row-start: 4;
