forside ændringer med knapper

--- a/css/forsidestyle.css
+++ b/css/forsidestyle.css
@@ -11,51 +11,13 @@
       background-image: linear-gradient(#37A8AD, #E4F2F4);
      }
 
-/*Nicolines work*/
-
-
-/*FORSIDE*/
-.logindforside{
- grid-column-start: 2;
- grid-row-start: 7;
- }
-
-.btnlogindforside{
- border: none;
- background-color: #ffff;
- border-radius: 80px;
- color: #022e42;
- padding:  1px 125px;
- font-size: 20px;
- font-family: 'montserrat';
- font-weight: 500;
- }
-
-.opretbrugerforside{
- grid-column-start: 2;
- grid-row-start: 8;
-}
-
-.btnopretbrugerforside{
- background-color: #ffff;
- border-radius: 80px;
- border: none;
- color: #022E42;
- padding: 1px 125px;
- font-size: 20px;
- font-family: 'montserrat';
- font-weight: 500;
- }
-
-
-
 
 
     /*GRID*/
 .forsidegrid{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 2% 2% 2% 2% 5% 70% 10% 10%; 
+    grid-template-columns: 5% 80% 40%;
+    grid-template-rows: 2% 2% 2% 2% 15% 70% 10% 10%; 
     grid-gap: 1em;
 }   
 
@@ -64,6 +26,42 @@
  grid-row-start:4; 
  }
 
+.logindforside{
+ grid-column-start: 2;
+ grid-row-start: 7;
+ }
+
+.btnlogindforside{
+    font-family: 'montserrat';
+    font-weight: 500; 
+    font-size: 20px;
+    color: white;
+    background-color: #37A8AD;
+    border: none;
+    border-radius: 80px;
+    width: 100%;
+    height: 120%
+        
+}
+
+.opretbrugerforside{
+ grid-column-start: 2;
+ grid-row-start: 8;
+}
+
+.btnopretbrugerforside{
+    font-family: 'montserrat';
+    font-weight: 500; 
+    font-size: 20px;
+    color: ##022E42;
+    background-color: #ffff;
+    border: none;
+    border-radius: 80px;
+    width: 100%;
+    height: 120%;
+    margin-top: 3%;
+        
+}
 /*button style*/
 
 
