--- a/newkey.css
+++ b/newkey.css
@@ -117,9 +117,21 @@ h1{
     font-size: 15px;
     color: #ffff;
 }
+
+.home{
+     grid-column-start:1;
+    grid-row-start: 4;
+    border-radius: 20px;
+    padding: 10px; 
+    margin-left: -60%;
+    border: 50%;
+    margin-left: 2%;
+    
+}
+
 .fitnessworld{
     grid-column-start:1;
-    grid-row-start: 4;
+    grid-row-start: 5;
     border-radius: 20px;
     padding: 10px; 
     margin-left: -60%;
@@ -128,7 +140,7 @@ h1{
 
 .ucl{
     grid-column-start: 1;
-    grid-row-start: 5;
+    grid-row-start: 6;
      border-radius: 20px;
     padding: 10px; 
     margin-left: -50%;
@@ -137,7 +149,7 @@ h1{
 
 .rejsekort{
     grid-column-start: 1;
-    grid-row-start: 6;
+    grid-row-start: 7;
      border-radius: 20px;
     padding: 10px; 
     margin-left: -50%;
@@ -235,4 +247,3 @@ img {
     -webkit-transform: scale(0.6);
             transform: scale(0.6);
   }  
-
