--- a/css/opretstyle.css
+++ b/css/opretstyle.css
@@ -10,13 +10,12 @@
       background-image: linear-gradient(#37A8AD, #E4F2F4);
       }
 
-a {
-  text-decoration: none;
-  display: inline-block;
+.back {
+margin-left: -200px;
+    margin-top: 10px;
   padding: 8px 16px;
-    font-size: 60px;
-    color: white; 
-    
+    font-size: 20px;
+    color: white;    
 }
 
 .loginlogo{
@@ -39,16 +38,17 @@ a {
 .oplysningeropret{
   font-weight: 300; 
     font-family: 'montserrat';
-    font-size: 13px;
+    font-size: 18px;
     font-weight: 300;
     color: #022E42; 
     margin-top: -5%; 
      margin-left: 15%;  
 }
 
-input[class="form-input"]{
+.textInput{
     width: 285px; 
-    height: 40px;
+    height: 42px;
+    opacity: 0.7;
   
     border-radius: 29px;
     
@@ -64,31 +64,29 @@ input[class="form-input"]{
     margin-left: 12%;
 }
 
-    
-.input[class="form-input"]{
-    font-family: 'montserrat'; 
-}
-
+span{
+    color: #fa7268;
+} 
 
 .checkbox{
     font-family: 'montserrat'; 
-        font-size: 10px;  
+        font-size: 11px;  
     color: #022E42;
-    margin-left: 17%;
+    margin-left: 15%;
     margin-top: 2%;  
     
 }
 
-span{
-    color: black; 
+a{
+   font-family: 'montserrat'; 
+        font-size: 10px;  
+    color: #022E42;
+    margin-left: 37%;
+    margin-top: 2%;  
+     
 }
 
-input{
-    margin-left: 1em; 
-    margin-bottom: .5em; 
-}
-
-button {
+.button {
     color: White;
   
     width: 275px;
@@ -109,11 +107,3 @@ button {
     font-weight: 500; 
     margin-left: 15%;
 }
-
-button:hover {
-    animation: ani9 0.4s ease-in-out infinite alternate;
-}
-@keyframes ani9 {
-        transform: translateY(3px);}
-
-	
