--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -67,6 +67,7 @@ form {
 input[type=text],input[type=password]{
   width: 275px; 
   height: 60px;
+    opacity: 0.7;
   border-radius: 29px;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
